testdata/zkc/invalid/basic_invalid_07.zkc
;;error:4:3-9:unexpected token
function f(u8 x) -> (u8 r) {
  r = x +
  return
}
